# rdflib

./: .coveragerc  .devcontainer.json  .dockerignore  .drone.yml  .editorconfig  .flake8  .flakeheaven.baseline  .gitattributes  .gitignore  .gitpod.yml  .hgignore  .isort.cfg  .mailmap  .pep8  .pre-commit-config.yaml  .readthedocs.yaml  .travis.fuseki_install_optional.sh  .travis.yml  CHANGELOG  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTORS  DEVELOPERS  DEVELOPERS.md  Dockerfile  Dockerfile.devcontainer  LICENSE  MANIFEST.in  Makefile  Pipfile  README  README.md  TODO  Taskfile.yml  black.toml  code.py  code2.py  credits.html  dataset_api.md  (+41 more)
.eggs/doctest_ignore_unicode-0.1.2-py3.8.egg/: nose_plugin.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: docker-images.yaml  test-report.yml  test.yml  validate.yaml
CVS/: Entries
admin/: README.md  get_merged_prs.py  pr_markdown.py  print_prs.py
benchmarks/: analysis.ipynb
devtools/: README.md  constraints-min.txt  constraints.min  diffrtpy.py  requirements-poetry.in  requirements-rtd.txt
doc/: BNode.html  InformationStore.html  Literal.html  Resource.html  SIR.html  URIRef.html  examples.html  index.html  installing.html  primer.txt  rdflib.css  redload.html  triple_store.html
doc/CVS/: Entries  Repository
docker/latest/: Dockerfile  requirements.in  requirements.txt
docker/unstable/: Dockerfile  requirements.txt
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  addons.rst  apidocs.rst  assorted_examples.rst  changelog.md  conf.py  decisions.md  developers.md  developers.rst  docs.md  docs.rst  faq.rst  gen_ref_pages.py  gettingstarted.md  gettingstarted.rst  graph_merging.rst  graph_utilities.rst  graphdb.md  graphs_bnodes.rst  graphterms.rst  howto.rst  index.md  index.rst  index.rst.txt  interface_guidelines.rst  intro_to_creating_rdf.md  intro_to_creating_rdf.rst  intro_to_graphs.md  intro_to_graphs.rst  intro_to_parsing.md  intro_to_parsing.rst  intro_to_sparql.md  intro_to_sparql.rst  merging.md  merging.rst  namespace_utilities.rst  namespaces_and_bindings.md  namespaces_and_bindings.rst  (+33 more)
docs/_static/: term_class_hierarchy.plantuml
docs/apidocs/: .gitignore  examples.rst  modules.rst  rdflib._provisional.rst  rdflib.extras.rst  rdflib.plugins.parsers.pyMicrodata.rst  rdflib.plugins.parsers.pyRdfa.extras.rst  rdflib.plugins.parsers.pyRdfa.host.rst  rdflib.plugins.parsers.pyRdfa.rdfs.rst  rdflib.plugins.parsers.pyRdfa.rst  rdflib.plugins.parsers.pyRdfa.transform.rst  rdflib.plugins.parsers.rst  rdflib.plugins.rst  rdflib.plugins.serializers.rst  rdflib.plugins.sparql.results.rst  rdflib.plugins.sparql.rst  rdflib.plugins.stores.rst  rdflib.rst  rdflib.tools.rst
docs/decisions/: 20220826-default_branch.md  20220826-default_branch.rst  20220911-uri_loading.rst  index.rst
docs/examples/: sparql_update.md
docs/includes/: abbreviations.md
docs/modules/: collection.rst  events.rst  index.rst  namespace.rst  node.rst  others.rst  parser.rst  resource.rst  result.rst  serializer.rst  statement.rst  store.rst  term.rst  util.rst
examples/: __init__.py  benchmark.py  berkeleydb_example.py  bind_prefix_cc.py  conjunctive_graphs.py  custom_datatype.py  custom_eval.py  datasets.py  example.py  film.py  foaf.n3  foaf.rdf  foafpaths.py  graph_digest_benchmark.py  graphvizVisualize.py  infixowl_ontology_creation.py  jsonld_serialization.py  parse_patch.py  patch_serializer_example.py  prepared_query.py  rdf-json2rdf.json  rdf-json2rdfexample.py  rdf_star2.py  rdf_star_1.py  rdf_star_object.py  rdf_star_recursive.py  rdf_star_simple.py  rdfa_example.py  resource.py  resource_example.py  secure_with_audit.py  secure_with_urlopen.py  simple_example.py  sleepycat_example.py  slice.py  smushing.py  smushingdemo.n3  sparql_query_example.py  sparql_service_query_example.py  sparql_update_example.py  (+4 more)
graphviz/: __init__.py
rdf/: sir.py
rdf/CVS/: Entries  Repository
rdflib/: BNode.py  Collection.py  EARLPlugin.py  Factory.py  FileInputSource.py  Graph.py  Identifier.py  InMemoryTripleStore.py  InformationStore.py  Journal.py  KDTreeTripleStore.py  Literal.py  Namespace.py  Node.py  QueryBuilder.py  QueryResult.py  RDF.py  RDFS.py  RedlandTripleStore.py  Resource.py  Statement.py  Store.py  StringInputSource.py  TextIndex.py  Triple.py  TripleStore.py  URIRef.py  URLInputSource.py  Variable.py  ZInformationStore.py  __init__.py  _graph.py  _network.py  _networking.py  _type_checking.py  _typing.py  _version.py  collection.py  compare.py  compat.py  (+35 more)
rdflib/CVS/: Entries  Repository
rdflib/_provisional/: __init__.py  resolver.py  uri_handling.py
rdflib/kernels/: wf.py  (+3 more)
rdflib_tools/: CSVWriter.py  DatabaseStats.py  EARLPlugin.py  FixTypeViews.py  QueryRunner.py  QueryStats.py  RDFPipe.py  README  describer.py  pathutils.py  sparqler.py
test/: BTreeStore.py  Dockerfile  IdentifierEquality.py  JSON.py  README  README.rst  Sleepycat.py  StoreTester.py  __init__.py  a.n3  a.ttl  a_faulty.n3  advanced_sparql_constructs.py  aggregate_graphs.py  bdb_optimized.py  bnode.py  comparison_graph  conftest.py  context.py  data.py  earl.py  events.py  fuzz_rdflib.py  graph.py  graph2_2.py  helper.py  identifier_equality.py  leaves.py  leaves.txt  literals.py  manifest.py  mysql.py  n3.py  n3Test.py  n3_2.py  n3_quoting.py  nt.py  ntriples.py  parse_bug.py  parser.py  (+291 more)
test/plugins/parser/: setup.cfg
test/plugins/parser/example/rdflib/plugin/parser/: __init__.py
test/plugins/sparqleval/: setup.cfg
test/plugins/sparqleval/example/rdflib/plugin/sparqleval/: __init__.py
test_reports/: rdflib_nquads-2013-12-22T192234.ttl  rdflib_nt-2013-12-22T191225.ttl  rdflib_nt-2020-05-27T032255.ttl  rdflib_sparql-2013-12-22T19:36:48.ttl  rdflib_sparql-HEAD.ttl  rdflib_trig-2013-12-22T19:31:52.ttl  rdflib_trig-2013-12-30T155657.ttl  rdflib_turtle-2013-12-22T191351.ttl  rdflib_w3c_nquads-HEAD.ttl  rdflib_w3c_ntriples-HEAD.ttl  rdflib_w3c_rdfxml-HEAD.ttl  rdflib_w3c_rdfxml_non_normative-HEAD.ttl  rdflib_w3c_sparql10-HEAD.ttl  rdflib_w3c_sparql11-HEAD.ttl  rdflib_w3c_trig-HEAD.ttl  rdflib_w3c_turtle-HEAD.ttl
(+7130 files in other folders)
