[tool.poetry]
name = "rdflib"
version = "7.1.0a0"
description = """RDFLib is a Python library for working with RDF, \
a simple yet powerful language for representing information."""
authors = ["Daniel 'eikeon' Krech <eikeon@eikeon.com>"]
maintainers = ["RDFLib Team <rdflib-dev@googlegroups.com>"]
repository = "https://github.com/RDFLib/rdflib"
documentation = "https://rdflib.readthedocs.org/"
license = "BSD-3-Clause"
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]
readme = "README.md"
packages = [
    { include = "rdflib" },
]
include = [
    { path = "test", format = "sdist" },
    { path = "docs", format = "sdist" },
    { path = "examples", format = "sdist" },
]

[tool.poetry.scripts]
rdfpipe = 'rdflib.tools.rdfpipe:main'
csv2rdf = 'rdflib.tools.csv2rdf:main'
rdf2dot = 'rdflib.tools.rdf2dot:main'
rdfs2dot = 'rdflib.tools.rdfs2dot:main'
rdfgraphisomorphism = 'rdflib.tools.graphisomorphism:main'

[tool.poetry.dependencies]
python = "^3.8.1"
isodate = "^0.6.0"
pyparsing = ">=2.1.0,<4"
berkeleydb = {version = "^18.1.0", optional = true}
networkx = {version = "^2.0.0", optional = true}
html5lib = {version = "^1.0", optional = true}
lxml = {version = "^4.3.0", optional = true}

[tool.poetry.group.dev.dependencies]
black = "23.7.0"
mypy = "^1.1.0"
lxml-stubs = "^0.4.0"

[tool.poetry.group.tests.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
coverage = {version = "^7.0.1", extras = ["toml"]}
types-setuptools = "^68.0.0.3"
setuptools = "^68.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1.1"
myst-parser = "^2.0.0"
sphinxcontrib-apidoc = "^0.3.0"
sphinx-autodoc-typehints = "^1.17.1"
typing-extensions = "^4.5.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.0.286"

[tool.poetry.extras]
berkeleydb = ["berkeleydb"]
networkx = ["networkx"]
html = ["html5lib"]
lxml = ["lxml"]

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
target-version = "py38"
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort
    "N", # pep8-naming
]

ignore = [
    "E501", # line too long:
    # Disabled based on black recommendations
    # https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
    "E203", # whitespace before ':'
    "E231", # missing whitespace after ','
    "E402", # Module level import not at top of file
]

# Same as Black.
line-length = 88

[tool.ruff.per-file-ignores]
"rdflib/plugins/sparql/*" = [
    "N801", # Class name should be UpperCamelCase
    "N802", # Function name should be lowercase
    "N803", # Argument name should be lowercase
    "N806", # Variable in function should be lowercase
    "N812", # Lowercase imported as non lowercase
    "N816", # Variable in class scope should be mixedCase
]
"rdflib/namespace/_*" = [
    "N815", # Variable in class scope should not be mixedCase
    "N999", # Invalid module name
]
"rdflib/plugins/parsers/{trix,rdfxml,notation3}.py" = [
    "N802", # Function name should be lowercase
    "N803", # Argument name should be lowercase
    "N806", # Variable in function should be lowercase
    "N816", # Variable in class scope should be mixedCase
]
"rdflib/extras/infixowl.py" = [
    "N803", # Function name should be lowercase
]
"rdflib/plugins/serializers/{turtle,longturtle,trig}.py" = [
    "N802", # Function name should be lowercase
    "N806", # Variable in function should be lowercase
    "N815", # Variable in class scope should not be mixedCase
]
"rdflib/plugins/stores/sparqlstore.py" = [
    "N803", # Argument name should be lowercase
]
"test/utils/namespace/_*" = [
    "N815", # Variable in class scope should not be mixedCase
    "N999", # Invalid module name
]
"test/test_sparql/test_{initbindings,datetime_processing,expressions}.py" = [
    "N802", # Function name should be lowercase
    "N806", # Variable in function should be lowercase
]
"test/test_store/test_store_sparql*.py" = [
    "N802", # Function name should be lowercase
]
"test/test_serializers/test_{prettyxml,serializer_turtle,serializer_xml}.py" = [
    "N802", # Function name should be lowercase
    "N803", # Function name should be lowercase
    "N806", # Variable in function should be lowercase
    "N815", # Variable in class scope should not be mixedCase
]
"test/test_literal/test_uriref_literal_comparison.py" = [
    "N802", # Function name should be lowercase
]
"test/test_nt_misc.py" = [
    "N802", # Function name should be lowercase
    "N806", # Variable in function should be lowercase
]
"test/test_graph/test_{container,graph_context,aggregate_graphs}.py" = [
    "N802", # Function name should be lowercase
    "N806", # Variable in function should be lowercase
    "N816", # Variable in class scope should be mixedCase
]


[tool.black]
required-version = "23.7.0"
line-length = "88"
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | \.var
    | \.github
    | _build
    | htmlcov
    | benchmarks
    | test_reports
    | rdflib.egg-info
    | buck-out
    | build
    | dist
    | venv
  )/
)
'''

[tool.pytest.ini_options]
addopts = [
   "--doctest-modules",
   "--ignore=admin",
   "--ignore=devtools",
   "--ignore=rdflib/extras/external_graph_libs.py",
   "--ignore-glob=docs/*.py",
   "--doctest-glob=docs/*.rst",
   "--strict-markers",
]
doctest_optionflags = "ALLOW_UNICODE"
filterwarnings = [
    # The below warning is a consequence of how pytest doctest detects mocks and how DefinedNamespace behaves when an undefined attribute is being accessed.
    "ignore:Code. pytest_mock_example_attribute_that_shouldnt_exist is not defined in namespace .*:UserWarning",
    # The below warning is a consequence of how pytest detects fixtures and how DefinedNamespace behaves when an undefined attribute is being accessed.
    "ignore:Code. _pytestfixturefunction is not defined in namespace .*:UserWarning",
]
markers = [
    "webtest: mark a test as using the internet",
]
# log_cli = true
# log_cli_level = "DEBUG"
log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(name)-12s %(filename)s:%(lineno)s:%(funcName)s %(message)s"
log_date_format = "%Y-%m-%dT%H:%M:%S"
log_cli_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(name)-12s %(filename)s:%(lineno)s:%(funcName)s %(message)s"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S"

[tool.isort]
profile = "black"
py_version = 37
line_length = 88
src_paths= ["rdflib", "test", "devtools", "examples"]
supported_extensions = ["pyw", "pyi", "py"]
skip = [
    '.eggs',         # exclude a few common directories in the
    '.git',          # root of the project
    '.hg',
    '.mypy_cache',
    '.pytest_cache',
    '.tox',
    '.venv',
    '.var',
    '.github',
    '_build',
    'htmlcov',
    'benchmarks',
    'test_reports',
    'rdflib.egg-info',
    'buck-out',
    'build',
    'dist',
    'venv',
]

[tool.mypy]
files = ['rdflib', 'test', 'devtools', 'examples']
python_version = "3.8"
warn_unused_configs = true
ignore_missing_imports = true
disallow_subclassing_any = false
warn_unreachable = true
warn_unused_ignores = true
no_implicit_optional = false
implicit_reexport = false

[[tool.mypy.overrides]]
module = "pyparsing.*"
# This is here because of an upstream issue with pyparsing:
# https://github.com/pyparsing/pyparsing/issues/385
# Once the issue is fixed this should be removed.
follow_imports = "skip"

[tool.coverage.run]
branch = true
source = ["rdflib"]
omit = ["*/_type_checking.py"]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # TYPE_CHECKING guarded code only affects type checkers.
    "^ *if (False|TYPE_CHECKING):",
    # constant used in protocols and abstract methods, does not run anything
    # and has no side effects.
    '^ +\.\.\.$',

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "if __name__==.__main__.:"
]
