[options.package_data]
rdflib = py.typed

[flake8]
ignore = W806
max-line-length = 88
exclude = host,extras,transform,rdfs,pyRdfa,sparql,results,pyMicrodata

[coverage:run]
branch = True
source = rdflib

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
    if __name__==.__main__.:

[mypy]
files = rdflib,test
python_version = 3.7
warn_unused_configs = True
ignore_missing_imports = True
disallow_subclassing_any = False
warn_unreachable = True
warn_unused_ignores = True

# This is here to exclude the setup.py files in test plugins because these
# confuse mypy as mypy think they are the same module.
exclude = (?x)(
    ^.*test/plugins/.*/setup.py$
  )

[mypy-pyparsing.*]
# This is here because of an upstream issue with pyparsing:
# https://github.com/pyparsing/pyparsing/issues/385
# Once the issue is fixed this should be removed.
follow_imports = skip

[isort]
profile = black
py_version = 37
line_length = 88
src_paths=rdflib,test
supported_extensions =
    pyw
    pyi
    py
skip =
    .eggs,         # exclude a few common directories in the
    .git,          # root of the project
    .hg,
    .mypy_cache,
    .pytest_cache,
    .tox,
    .venv,
    .github,
    _build,
    htmlcov,
    benchmarks,
    examples,       # No need to Black examples
    test_reports,
    rdflib.egg-info,
    buck-out,
    build,
    dist,
    venv,
