[options.package_data]
rdflib = py.typed

# https://flake8.pycqa.org/en/latest/user/configuration.html
[flake8]
exclude =
    .git,
    __pycache__,
    .venv,
    .tox,
    var,
    .mypy_cache,
    test/data/suites/, # does not contain python
    test/jsonld/1.1/, # does not contain python
    test/jsonld/test-suite/, # does not contain python
    test/data/variants/, # does not contain python
    test/data/translate_algebra/, # does not contain python
    docs/rdf_terms.rst, # This file is causing an error on GitHub actions
extend-ignore =
    # Disabled so that black can control line length.
    E501, # line too long
    # Disabled based on black recommendations
    # https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
    E203, # Whitespace before ':'
    W503, # Line break occurred before a binary operator
    # Disabled because this bumps heads with black
    E231, # missing whitespace after ','

[coverage:run]
branch = True
source = rdflib
omit =
    */_type_checking.py

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # TYPE_CHECKING guarded code only affects type checkers.
    ^ +if (False|TYPE_CHECKING):
    # constant used in protocols and abstract methods, does not run anything
    # and has no side effects.
    ^ +\.\.\.$

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
    if __name__==.__main__.:

[mypy]
files = rdflib,test,devtools
python_version = 3.7
warn_unused_configs = True
ignore_missing_imports = True
disallow_subclassing_any = False
warn_unreachable = True
warn_unused_ignores = True

# This is here to exclude the setup.py files in test plugins because these
# confuse mypy as mypy think they are the same module.
exclude = (?x)(
    ^.*test/plugins/.*/setup.py$
  )

[mypy-pyparsing.*]
# This is here because of an upstream issue with pyparsing:
# https://github.com/pyparsing/pyparsing/issues/385
# Once the issue is fixed this should be removed.
follow_imports = skip

[isort]
profile = black
py_version = 37
line_length = 88
src_paths=rdflib,test
supported_extensions =
    pyw
    pyi
    py
skip =
    .eggs,         # exclude a few common directories in the
    .git,          # root of the project
    .hg,
    .mypy_cache,
    .pytest_cache,
    .tox,
    .venv,
    .github,
    _build,
    htmlcov,
    benchmarks,
    examples,       # No need to Black examples
    test_reports,
    rdflib.egg-info,
    buck-out,
    build,
    dist,
    venv,
