[options.package_data]
rdflib = py.typed

# https://flake8.pycqa.org/en/latest/user/configuration.html
[flake8]
exclude =
    .git,
    __pycache__,
    .venv,
    .var,
    .tox,
    var,
    .mypy_cache,
    test/data/suites/, # does not contain python
    test/jsonld/1.1/, # does not contain python
    test/jsonld/test-suite/, # does not contain python
    test/data/variants/, # does not contain python
    test/data/translate_algebra/, # does not contain python
    docs/rdf_terms.rst, # This file is causing an error on GitHub actions
extend-ignore =
    # Disabled so that black can control line length.
    E501, # line too long
    # Disabled based on black recommendations
    # https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
    E203, # Whitespace before ':'
    W503, # Line break occurred before a binary operator
    # Disabled because this bumps heads with black
    E231, # missing whitespace after ','
