# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html
[metadata]
name = example.rdflib.plugin.parser
version = 0.0.0

[options]
packages = find_namespace:

[options.packages.find]
include =
    example.rdflib.plugin.parser


[options.entry_points]
rdf.plugins.parser =
    example.rdflib.plugin.parser = example.rdflib.plugin.parser:ExampleParser
