# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html
[metadata]
name = example.rdflib.plugin.sparqleval
version = 0.0.0

[options]
packages = find_namespace:

[options.packages.find]
include =
    example.rdflib.plugin.sparqleval


[options.entry_points]
rdf.plugins.sparqleval =
    example.rdflib.plugin.sparqleval = example.rdflib.plugin.sparqleval:custom_eval
